--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "themes/even"]
 	path = themes/even
-	url = https://github.com/tac0x2a/hugo-theme-even
+	url = git@github.com:tac0x2a/hugo-theme-even.git
 [submodule "public"]
 	path = public
 	url = git@github.com:tac0x2a/tac0x2a.github.io.git
